--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,21 +1,19 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
-{% block title %}
-  {% trans "Your shopping cart" %}
-{% endblock %}
+{% block title %}Your shopping cart{% endblock %}
 
 {% block content %}
-  <h1>{% trans "Your shopping cart" %}</h1>
+  <h1>Your shopping cart</h1>
   <table class="cart">
     <thead>
       <tr>
-	<th>{% trans "Image" %}</th>
-	<th>{% trans "Product" %}</th>
-	<th>{% trans "Quantity" %}</th>
-	<th>{% trans "Remove" %}</th>
-	<th>{% trans "Unit price" %}</th>
-	<th>{% trans "Price" %}</th>
+	<th>Image</th>
+	<th>Product</th>
+	<th>Quantity</th>
+	<th>Remove</th>
+	<th>Unit price</th>
+	<th>Price</th>
       </tr>
     </thead>
     <tbody>
@@ -36,7 +34,7 @@
 		{% csrf_token %}
               </form>
             </td>
-            <td><a href="{% url "cart:cart_remove" product.id %}">{% trans "Remove" %}</a></td>
+            <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
 	    <td class="num">${{ item.price }}</td>
 	    <td class="num">${{ item.total_price }}</td>
           </tr>
@@ -44,14 +42,13 @@
       {% endfor %}
       {% if cart.coupon %}
 	<tr class="subtotal">
-	  <td>{% trans "Subtotal" %}</td>
+	  <td>Subtotal</td>
 	  <td colspan="4"></td>
 	  <td class="num">${{ cart.get_total_price|floatformat:"2" }}</td>
         </tr>
         <tr>
-	  {% blocktrans with code=cart.coupon.code discount=cart.coupon.discount %}
+	  {% code=cart.coupon.code discount=cart.coupon.discount %}
 	    <td>"{{ code }}" coupon ({{ discount }}% off)</td>
-	  {% endblocktrans %}
 	  <td colspan="4"></td>
 	  <td class="num neg">
 	    - ${{ cart.get_discount|floatformat"2" }}
@@ -59,7 +56,7 @@
         </tr>
       {% endif %}
       <tr class="total">
-        <td>{% trans "Total" %}</td>
+        <td>Total</td>
         <td colspan="4"></td>
         <td class="num">
 	  ${{ cart.get_total_price_after_discount|floatformat:"2" }}
@@ -69,7 +66,7 @@
   </table>
   {% if recommended_products %}
     <div class="recommendations cart">
-      <h3>{% trans "People who bought this also bought" %}</h3>
+      <h3>People who bought this also bought</h3>
       {% for p in recommended_products %}
         <div class="item">
           <a href="{{ p.get_absolute_url }}">
@@ -80,16 +77,14 @@
       {% endfor %}
     </div>
   {% endif %}
-  <p>{% trans "Apply a coupon" %}:</p>
+  <p>Apply a coupon</p>
   <form action="{% url "coupons:apply" %}" method="post">
     {{coupon_apply_form }}
-    <input type="subit" value={% trans "Apply" %}>
+    <input type="subit" value="Apply">
     {% csrf_token %}
   </form>
   <p class="text-right">
-    <a href="{% url "shop:product_list" %}" class="button light">{% trans "Continue shopping" %}</a>
-    <a href="{% url "orders:order_create" %}" class="button">
-      {% trans "Checkout" %}
-    </a>
+    <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
+    <a href="{% url "orders:order_create" %}" class="button">Checkout</a>
   </p>
 {% endblock %}
