--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -1,12 +1,10 @@
 {% extends "shop/base.html" %}
 
 {% block title %}
-  {% trans "Thank you" %}
+   Thank you
 {% endblock %}
 
 {% block content %}
-  <h1>{% trans "Thank you" %}</h1>
-  {% blocktrans with order_id=order.id %}
-    <p>Your order has been successfully completed. Your order number is<strong>{{ order.id }}</strong>.</p>
-  {% endblocktrans %}
+  <h1>Thank you</h1>
+  <p>Your order has been successfully completed. Your order number is<strong>{{ order.id }}</strong>.</p>
 {% endblock %}
