--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -40,28 +40,30 @@
           </tr>
 	{% endwith %}
       {% endfor %}
-      {% if cart.coupon %}
-	<tr class="subtotal">
-	  <td>Subtotal</td>
-	  <td colspan="4"></td>
-	  <td class="num">${{ cart.get_total_price|floatformat:"2" }}</td>
-        </tr>
-        <tr>
-	  {% code=cart.coupon.code discount=cart.coupon.discount %}
-	    <td>"{{ code }}" coupon ({{ discount }}% off)</td>
-	  <td colspan="4"></td>
-	  <td class="num neg">
-	    - ${{ cart.get_discount|floatformat"2" }}
-	  </td>
-        </tr>
-      {% endif %}
-      <tr class="total">
-        <td>Total</td>
-        <td colspan="4"></td>
-        <td class="num">
-	  ${{ cart.get_total_price_after_discount|floatformat:"2" }}
-	</td>
-      </tr>
+{% if cart.coupon %}
+  <tr class="subtotal">
+    <td>Subtotal</td>
+    <td colspan="4"></td>
+    <td class="num">${{ cart.get_total_price|floatformat:"2" }}</td>
+  </tr>
+  <tr>
+    <td>
+      "{{ cart.coupon.code }}" coupon
+      ({{ cart.coupon.discount }}% off)
+    </td>
+    <td colspan="4"></td>
+    <td class="num neg">
+      - ${{ cart.get_discount|floatformat:"2" }}
+    </td>
+  </tr>
+{% endif %}
+<tr class="total">
+  <td>Total</td>
+  <td colspan="4"></td>
+  <td class="num">
+    ${{ cart.get_total_price_after_discount|floatformat:"2" }}
+  </td>
+</tr>
     </tbody>
   </table>
   {% if recommended_products %}
@@ -80,7 +82,7 @@
   <p>Apply a coupon</p>
   <form action="{% url "coupons:apply" %}" method="post">
     {{coupon_apply_form }}
-    <input type="subit" value="Apply">
+    <input type="submit" value="Apply">
     {% csrf_token %}
   </form>
   <p class="text-right">
