Remake count discount for price it's working

--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -18,6 +18,7 @@
       {% endfor %}
       {% if cart.coupon %}
         <li>
+	  "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
 	  <span>- ${{ cart.get_discount|floatformat:"2" }}</span>
 	</li>
       {% endif %}
